UHF-2976: Fix content liftup image layout bug when the image does not load

--- a/src/scss/06_components/paragraphs/_content-liftup.scss
+++ b/src/scss/06_components/paragraphs/_content-liftup.scss
@@ -23,6 +23,7 @@ $_info-row__icon-size: $spacing-and-half;
   @include breakpoint($breakpoint-m) {
     align-self: stretch;
     background-color: $color-black-5;
+    max-width: 50%;
   }
 
   @include breakpoint($breakpoint-l) {
